k8s/petclinic_chart_local/templates/petclinic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  labels:
    name: petclinic
spec:
  selector:
    app: petclinic
  ports:
  - port: 8080
    targetPort: 8080
