k8s/petclinic_chart_local/templates/reverse-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy-depl
spec:
  selector:
    matchLabels:
      app: reverse-proxy-depl
  template:
    metadata:
      labels:
        app: reverse-proxy-depl
    spec:
      containers:
      - name: reverse-proxy-depl
        image: ersinsari/nginx-proxy:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-svc
spec:
  selector:
    app: reverse-proxy-depl
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
