k8s/petclinic_chart_local/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 127.0.0.1
      http:
        paths:
          - backend:
              service:
                name: petclinic-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
